# GPR5100-RDT-Template

./: .travis.yml  CMakeLists.txt  vcpkg.json
.github/workflows/: basic.yml
src/: CMakeLists.txt  Channel.h  Client.cpp  Client.h  Packet.h  Receiver.cpp  Receiver.h  Sender.cpp  Sender.h
test/: CMakeLists.txt
test/lib/test_framework/: CMakeLists.txt  TestChannel.cpp  TestChannel.h  TestClient.h  TestSender.h
test/tests/: CMakeLists.txt  checksum_check.cpp  seq_nmb_check.cpp  timeout.cpp  timeout_check.cpp
